--- a/extras/play/index.html
+++ b/extras/play/index.html
@@ -1,37 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Ashwin Anil 🎮 Game</title>
-    <link rel="icon" type="image/png" href="/img/logo/favicon.png" hreflang="en-us">
-    <meta property="og:title" content="Ashwin Anil - Game" />
-    <meta property="og:description" content="14 year old front-end developer & designer" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashwin.videntstudios.com/" />
-    <meta property="og:site_name" content="Ashwin Anil 🎮 Game" />
-    <meta property="og:image" content="/img/pic.jpg" />
-    <meta property="og:image:width" content="1280" />
-    <meta property="og:image:height" content="800" />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:locale" content="en_US">
-    <meta name="description" content="14 year old front-end developer & designer">
-    <meta name="keywords" content="design, development, web, ashwin, ashwin anil, ashwin mathew anil, javascript, indian">
-    <meta itemprop="name" content="Ashwin Anil 🎮">
-    <meta itemprop="description" content="Ashwin Anil 🎮 Game">
-    <meta itemprop="image" content="img/pic.png">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css" hreflang="en-us">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="favicon.png" rel="shortcut icon" type="image/png" />
-  </head>
-  <body id="body">
-    <div id="game"></div>
-    <div id="pausemenu">
-    </div>
-    <script src="three.min.js"></script>
-    <script src="script.js"></script>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Game - Ashwin Anil</title>
+  <link rel="icon" type="image/svg" href="/media/favicon.svg"/>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+	<meta content="Ashwin Anil" property="og:title" />
+	<meta content="A 16 year old student aspiring to be a full stack developer." property="og:description" />
+	<meta content="https://ashwinn.xyz" property="og:url" />
+	<meta content="https://ashwinn.xyz/media/pfp.png" property="og:image" />
+	<meta content="#1031ae" data-react-helmet="true" name="theme-color" />
+</head>
+  <body>
+   <canvas id="gameCanvas"  />
 
  </body>
+  <script src="script.js"></script>
 </html>
  
