--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>404 - Ashwin Anil</title>
   <link rel="icon" type="image/svg" href="/media/favicon.svg"/>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="/style.css" rel="stylesheet" type="text/css" />
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	<meta content="Ashwin Anil" property="og:title" />
