--- a/extras/password.html
+++ b/extras/password.html
@@ -770,7 +770,7 @@ exports.init = init;
         ;
             const templateError = "template_error",
                 isRememberEnabled = true,
-                staticryptConfig = {"staticryptEncryptedMsgUniqueVariableName":"c1ba5fbc1201b5a3a18ca30fa223119e4a78dbb8762aee15f8f9e1168ed124a033faed3a4592e26f24f250834c1d0c03271a97c26fcc879491bab3d8c5f46b26","isRememberEnabled":true,"rememberDurationInDays":0,"staticryptSaltUniqueVariableName":"be229753cf39fc91aef6f3c1b0fd220e"};
+                staticryptConfig = {"staticryptEncryptedMsgUniqueVariableName":"513b09f51c0e05eecd3b9e205699dc21bf8f013c8b1ba691e7a1311be68f5c2b586b278cc485364ba0ac9a84e98493de77543f0d514f12a904eb8baa49c3369a","isRememberEnabled":true,"rememberDurationInDays":0,"staticryptSaltUniqueVariableName":"1de2345bf62b69e045de8954ac2ef635"};
 
             // you can edit these values to customize some of the behavior of StatiCrypt
             const templateConfig = {
@@ -791,7 +791,7 @@ exports.init = init;
                 // replaced, no need to do anything
                 if (!isSuccessful) {
                     // hide loading screen
-                    document.getElementById("staticrypt_loading").classList.add("hidden");
+                    document.getElementById("staticrypt_loading").classList.add("");
                     document.getElementById("staticrypt_content").classList.remove("hidden");
                     document.getElementById("staticrypt-password").focus();
 
@@ -818,4 +818,3 @@ exports.init = init;
         </script>
     </body>
 </html>
-
