--- a/extras/password.html
+++ b/extras/password.html
@@ -791,7 +791,7 @@ exports.init = init;
                 // replaced, no need to do anything
                 if (!isSuccessful) {
                     // hide loading screen
-                    document.getElementById("staticrypt_loading").classList.add("");
+                    document.getElementById("staticrypt_loading").classList.add("hidden");
                     document.getElementById("staticrypt_content").classList.remove("hidden");
                     document.getElementById("staticrypt-password").focus();
 
