--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 
 	<main>
    
-		<img class="error-image" src="media/error.png" alt="error png">
+		<img class="error-image" src="/media/error.png" alt="error png">
 
 		<section class="about">
 			<h1 style="font-size:50px;">404 Error</h1>
