--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
 		</footer>
 	</main>
 
-	<script src="script.js"></script>
+	<script src="/script.js"></script>
   <style>
     .error-image{
       height: 60%;
