--- a/extras/index.html
+++ b/extras/index.html
@@ -45,7 +45,7 @@
 
       <div class="section-row">
 			<div class="section-col">
-				<div onclick="window.open('/extras/play', '_blank');" class="section">
+				<div onclick="window.open('https://github.com/ashwin1927/personal-portfolio', '_blank');" class="section">
 					<div class="section-in">
 						<img src="/media/extras/github.png" alt="Github_link">
 					</div>
