--- a/extras/index.html
+++ b/extras/index.html
@@ -55,14 +55,14 @@
 				<h2>OS Code</h2>
 			</div>
 			<div class="section-col">
-				<div onclick="window.open('https://matias.ma/nsfw/', '_blank');" class="section">
+				<div onclick="window.open('http://thisismywebsitenow.com/', '_blank');" class="section">
 					<div class="section-in">
-						<img src="/media/extras/matias.png" alt="matias.ma">
+						<img src="/media/extras/urweb.jpg" alt="thisismywebsitenow">
 					</div>
 				</div>
 			</div>
       <div class="hover-text">
-				<h2>Conga!</h2>
+				<h2>ur website</h2>
 			</div>
 
       
@@ -266,7 +266,7 @@ p{
 .copyright{
 display: flex;
 align-items: center;
-width: auto;
+width: 100%;
 }
 
 .copyright p{
