--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
 
 				<div class="btngrid">
         <button class="button-28" onclick="window.location.href='/';" role="button">Home 🏡</button>
-        <button class="button-28" onclick="window.open('/extras/play')" role="button">Game 🎱</button>
+        <button class="button-28" onclick="window.open('/extras')" role="button">Extras 🎱</button>
         </div>
 			</div>
 		</section>
