--- a/extras/flappy/index.html
+++ b/extras/flappy/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Game - Ashwin Anil</title>
   <link rel="icon" type="image/svg" href="/media/favicon.svg"/>
-	<link href="/extras/play/style.css" rel="stylesheet" type="text/css" />
+	<link href="/extras/flappy/style.css" rel="stylesheet" type="text/css" />
 	<meta content="Ashwin Anil" property="og:title" />
 	<meta content="A 16 year old student aspiring to be a full stack developer." property="og:description" />
 	<meta content="https://ashwinn.xyz" property="og:url" />
@@ -16,6 +16,6 @@
    <canvas id="gameCanvas"  />
 
  </body>
-  <script src="/extras/play/script.js"></script>
+  <script src="/extras/flappy/script.js"></script>
 </html>
  
