--- a/extras/ball/index.html
+++ b/extras/ball/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Fall game</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Fall game</title>
+  <link rel="stylesheet" href="/extras/ball/style.css">
 </head>
+
 <body>
-<div id="game">
+  <div id="game">
     <div id="character"></div>
-</div>
+  </div>
 
 </body>
-<script src="script.js"></script>
+<script src="/extras/ball/script.js"></script>
+
 </html>
