--- a/extras/index.html
+++ b/extras/index.html
@@ -55,9 +55,9 @@
 				<h2>OS Code</h2>
 			</div>
 			<div class="section-col">
-				<div onclick="window.open('/extras/ball', '_blank');" class="section">
+				<div onclick="window.open('http://thisismywebsitenow.com/', '_blank');" class="section">
 					<div class="section-in">
-						<img src="/media/extras/urweb.jpg" alt="balls">
+						<img src="/media/extras/urweb.jpg" alt="thisismywebsitenow">
 					</div>
 				</div>
 			</div>
