--- a/extras/ball/index.html
+++ b/extras/ball/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Fall game</title>
   <link rel="stylesheet" href="/extras/ball/style.css">
+  <link rel="icon" type="image/svg" href="/media/favicon.png"/>
 </head>
 
 <body>
