--- a/extras/flappy/index.html
+++ b/extras/flappy/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Game - Ashwin Anil</title>
-  <link rel="icon" type="image/svg" href="/media/favicon.svg"/>
+  <link rel="icon" type="image/svg" href="/media/favicon.png"/>
 	<link href="/extras/flappy/style.css" rel="stylesheet" type="text/css" />
 	<meta content="Ashwin Anil" property="og:title" />
 	<meta content="A 16 year old student aspiring to be a full stack developer." property="og:description" />
