--- a/extras/index.html
+++ b/extras/index.html
@@ -55,14 +55,14 @@
 				<h2>OS Code</h2>
 			</div>
 			<div class="section-col">
-				<div onclick="window.open('http://thisismywebsitenow.com/', '_blank');" class="section">
+				<div onclick="window.open('/extras/ball', '_blank');" class="section">
 					<div class="section-in">
-						<img src="/media/extras/urweb.jpg" alt="thisismywebsitenow">
+						<img src="/media/extras/urweb.jpg" alt="balls">
 					</div>
 				</div>
 			</div>
       <div class="hover-text">
-				<h2>ur website</h2>
+				<h2>Ball Game</h2>
 			</div>
 
       
