--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 
 		<section class="home" id="home">
-			<h1 style="--animation-order:1;" class="animate-in">Ashwin Mathew Anil</h1>
+			<h1 style="--animation-order:1;" class="animate-in">Ashwin Anil</h1>
 			<p style="--animation-order:2;" class="animate-in">Developer, Designer</p>
 		</section>
 
