--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<ul>
 					<li>
 						<a href="#home">
-							<img src="media/pfp.png">
+							<img src="media/pf.png">
 						</a>
 					</li>
 					<div class="line"></div>
