--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 					</div>
 				</a>
 
+				<a href="https://ingrain.videntstudios.com" target="_blank">
+					<div class="project ingrain">
+					</div>
+				</a>
+
 			</div>
 		</section>
 
