--- a/index.html
+++ b/index.html
@@ -59,27 +59,27 @@
 		<section class="projects" id="projects">
       
 			<div class="col">
-				<a href="https://www.videntstudios.com" target="_blank">
+				<a href="https://videntstudios.ashwinanil.com" target="_blank">
 					<div class="project videntstudios">
 					</div>
 				</a>
 
-				<a href="https://pelly.videntstudios.com" target="_blank">
+				<a href="https://pelly.ashwinanil.com" target="_blank">
 					<div class="project pelly">
 					</div>
 				</a>
 
-				<a href="https://fringes.ashwinn.xyz" target="_blank">
+				<a href="https://fringes.ashwinanil.com" target="_blank">
 					<div class="project fringes">
 					</div>
 				</a>
 
-				<a href="https://maise.videntstudios.com" target="_blank">
+				<a href="https://maise.ashwinanil.com" target="_blank">
 					<div class="project maise">
 					</div>
 				</a>
 
-				<a href="https://ingrain.videntstudios.com" target="_blank">
+				<a href="https://ingrain.ashwinanil.com" target="_blank">
 					<div class="project ingrain">
 					</div>
 				</a>
@@ -90,7 +90,7 @@
 		<section class="contact" id="social">
 			<p>Social Links</p>
 			<div class="links">
-        <a href="mailto:mail@ashwinn.xyz" target="_blank">Mail</a>
+        <a href="mailto:mail@ashwinanil.com" target="_blank">Mail</a>
 				<a href="https://www.instagram.com/ashwin_1927/" target="_blank">Instagram</a>
 				<a href="https://www.youtube.com/@AshwinMathewAnil" target="_blank">Youtube</a>
         <a href="https://www.linkedin.com/in/ashwin-anil/" target="_blank">Linkedin</a>
