--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 					</div>
 				</a>
 
+				<a href="https://vedaai.ashwinanil.com" target="_blank">
+					<div class="project veda">
+					</div>
+				</a>
 			</div>
 		</section>
 
